--- a/src/main/resources/archetype-resources/pom.xml
+++ b/src/main/resources/archetype-resources/pom.xml
@@ -65,7 +65,7 @@
         <dependency>
             <groupId>org.primefaces</groupId>
             <artifactId>primefaces</artifactId>
-            <version>7.0</version>
+            <version>7.0.RC2</version>
         </dependency>
         <dependency>
             <groupId>org.primefaces.extensions</groupId>
@@ -114,6 +114,6 @@
                 </configuration>
             </plugin>
         </plugins>
-        <finalName>admin-starter</finalName>
+        <finalName>${artifactId}</finalName>
     </build>
 </project>
