--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
     <groupId>com.github.adminfaces</groupId>
     <artifactId>admin-starter-tomcat-archetype</artifactId>
-    <version>1.0.0-RC21-SNAPSHOT</version>
+    <version>1.0.0</version>
     <packaging>maven-archetype</packaging>
 
     <name>admin-starter-tomcat-archetype</name>
