--- a/src/main/resources/archetype-resources/pom.xml
+++ b/src/main/resources/archetype-resources/pom.xml
@@ -9,7 +9,7 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <adminfaces.version>1.0.1-SNAPSHOT</adminfaces.version>
+        <adminfaces.version>1.0.1</adminfaces.version>
     </properties>
 
     <dependencies>
