--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>com.github.adminfaces</groupId>
     <artifactId>admin-starter-tomcat-archetype</artifactId>
-    <version>1.0.1</version>
+    <version>1.0.2-SNAPSHOT</version>
     <packaging>maven-archetype</packaging>
 
     <name>admin-starter-tomcat-archetype</name>
@@ -33,7 +33,7 @@
         <connection>scm:git:https://github.com/adminfaces/admin-starter-tomcat-archetype.git</connection>
         <developerConnection>scm:git:git@github.com:adminfaces/admin-starter-tomcat-archetype.git</developerConnection>
         <url>https://github.com/adminfaces/admin-starter-tomcat-archetype.git</url>
-        <tag>1.0.1</tag>
+        <tag>HEAD</tag>
     </scm>
 
 
